clusters/homelab/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: default
  labels:
    app.kubernetes.io/name: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homarr
    spec:
      containers:
      - image: ghcr.io/ajnart/homarr:latest
        name: homarr
        ports:
        - containerPort: 7575
        volumeMounts:
        - name: pvc-config
          mountPath: /app/data/configs
          readOnly: false
        - name: pvc-icons
          mountPath: /app/public/icons
          readOnly: false
      volumes:
      - name: pvc-config
        persistentVolumeClaim:
          claimName: homarr-config-volume-claim
      - name: pvc-icons
        persistentVolumeClaim:
          claimName: homarr-icons-volume-claim
