clusters/homelab/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.208
  name: homarr
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: homarr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 7575
