clusters/homelab/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-homarr
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-nginx-dns
spec:
  tls:
  - hosts:
    - homarr.blocknothing.org
    secretName: letsencrypt-nginx-homarr
  rules:
    - host: homarr.blocknothing.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 80
  ingressClassName: nginx
